# StudyLM

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  README.md  architecture.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prd.md  tailwind.config.ts  vite.config.ts
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-20f017d8adf1d050500acbdc8395a1f6bdc25e5c1d510aa154f3dfe5e3e81234.json  query-27aa05c71eb1547ba849a1d89fd9fcaca876db02a51a8e7d9d214f48d0112a63.json  query-287dede851536ae37aff18a4bc1d32c9be18d4a38f6fb9b3a4789796fd35e7fa.json  query-5d19c80e583d72d443ee8f493cc319504eb35dda38170bb9f295cf38eaabde1d.json  query-63b3a427ea9a038b4b11d46cf8bb8e05ef4b061d6d82461a275f8a52879bd4e7.json  query-6600aea2c85da74d2da3f6e1215ee6c6eacb1a6b925257e4a636ff39def71e81.json  query-7c6bf5a8ffaa341cf2cc4f6bd74ee3a95be82190750040865048135fd588cc72.json  query-871396a9dc8113f099d980c26d350ae5a939012e70d8967a4e369a5a73b9684c.json  query-9b26a1b8b852cc7e90e493eddf9691b80301351ff08ddb4f51a224d57ce32133.json  query-a02cc697017f85ab5674373d473659154ad34cc970ce41198cfe76d42780a1da.json  query-a9e26fa9ce9411ced982ba6d90d2c6b815d809f7a67485cb4b69e56dee0e716c.json  query-b997508f4329ac2817410b9a47a72d8c4a5ecf6b68adcdd9b729f66ab6d3476d.json  query-b9c34f988bcea1227b3042153a0e4c53cd762b5789eaa0b4eb04d66cad7b74b3.json  query-c33cd4a13e0164eedf39f0f65521285cb2cb9027b1dd9af2c38fe109b1033611.json  query-c81535e4737f971959233745049400c1a8c500b3c1c57f711faaf7c09760c458.json  (+3 more)
src-tauri/migrations/: 0001_init.sql  (+2 more)
(+68 files in other folders)
